# oil-market-simulation

./: .gitignore  LICENSE  README.md  default.yaml  pyproject.toml
baseline/: baseline.py
configs/: _template.yaml  baseline_shock.yaml  baseline_shockless.yaml  default.yaml  demand_stressed_shock.yaml  demand_stressed_shockless.yaml  new_config.yaml  oversupplied_shock.yaml  oversupplied_shockless.yaml  undersupplied_shock.yaml  undersupplied_shockless.yaml  weak_production_shock.yaml  weak_production_shockless.yaml
configs/misc/: default.yaml  new_config.yaml
experiments/exp-0b5bfb4b-demand-stressed/: config.yaml  experiment.json
experiments/exp-167f8fd5-responsivess-0-2/: config.yaml  experiment.json
experiments/exp-1984be04-baseline-shock-higher-shock-value/: config.yaml  experiment.json
experiments/exp-3bff84e3-responsivess-0-9/: config.yaml  experiment.json
experiments/exp-43c9d920-simulation-duration-500/: config.yaml  experiment.json
experiments/exp-4aa071f5-weak-production/: config.yaml  experiment.json
experiments/exp-67fd57c1-baseline-shock/: config.yaml  experiment.json
experiments/exp-7513c6a8-shock-duration-90/: config.yaml  experiment.json
experiments/exp-7bd21e24-simulation-duration-300/: config.yaml  experiment.json
experiments/exp-80f5c639-extreme-values-refactor-1/: config.yaml  experiment.json
experiments/exp-81f3ef69-shock-duration-120/: config.yaml  experiment.json
runs/: history.json
runs/20260226_095800/: history.csv
src/: simulation.py
tests/: test_simulation.py  test_timesteps.py  test_yaml_load.py
(+143 files in other folders)
