[project]
name = "ABS Descrete-Time simulation of Oil Industry Market Shocks"
description = "A Descrete-Time Agent-Based simulation of market shocks in the oil market."
authors = [
    {name = "Adrian Edwards", email = "aedwrds0603@gmail.com"}
]
requires-python = ">=3.10,<3.12"
readme = {file = "README.txt", content-type = "text/markdown"}
